cli/aws_orbit/data/kubectl/orbit-system/02a-ssm-agent-daemonset-installer.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orbit-system-ssm-daemons
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ssm-agent-installer
  namespace: orbit-system-ssm-daemons
spec:
  selector:
    matchLabels:
      job: ssm-agent-installer
  template:
    metadata:
      labels:
        job: ssm-agent-installer
    spec:
      hostPID: true
      restartPolicy: Always
      nodeSelector:
        orbit/node-type: ec2
      volumes:
      - name: install-script
        configMap:
          name: ssm-installer-script
      - name: host-mount
        hostPath:
          path: /tmp/install
      serviceAccount: ssm-agent-installer
      containers:
      - image: public.ecr.aws/v3o4w1g6/gcr.io/google-containers/pause:2.0
        name: pause
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 1000
          readOnlyRootFilesystem: true
